[package]
name = "oats-rs"
description = "Short, unique ids without the hassle of random uuids."
version = "0.1.2"
edition = "2021"

license = "AGPL-3.0"
repository = "https://github.com/Skailys/oats-rs.git"
documentation = "https://docs.rs/oats-rs"
readme = "README.md"

keywords = ["oats", "distributed-id", "simple", "auto-increment"]
categories = ["development-tools", "data-structures", "algorithms"]

include = [
    "**/*.rs",
    "Cargo.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oats"

[dependencies]
base64 = "0.20.0"